kubernetes/applications/media/music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: music-assistant

  ports:
    - name: http
      port: 8095
      targetPort: http
      protocol: TCP
